--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 
           <div class="mockBody">
             <div class="coverWrap">
-              <img src="images/ebook-en-3d.png" alt="3D mockup of the English ebook"
+              <img src="3d_ebook_ingles.png" alt="3D mockup of the English ebook"
                    onerror="this.remove(); document.getElementById('fallback').style.display='flex';" />
               <div class="coverFallback" id="fallback" style="display:none;">
                 Upload your image to:<br><b>images/ebook-en-3d.png</b>
