--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     <div class="inner">
       <div class="brand">
         <span class="dot"></span>
-        <img src="images/logo-gptschool.png" alt="GPT School" class="logo-top" />
+        <img src="logo_gptschool_transparent_120.png" alt="GPT School" class="logo-top" />
 
       </div>
 
